--- a/style.css
+++ b/style.css
@@ -77,10 +77,17 @@ header h1 {
   margin-bottom: 8px;
   font-weight: 500;
 }
-.video-wrap {
+/*.video-wrap {
   overflow: hidden;
   border-radius: 16px;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}*/
+video {
+  width: 100%;
+  max-width: 700px;
+  margin: 15px 0;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.25);
 }
 
 /* ===== Botões ===== */
@@ -97,6 +104,12 @@ header h1 {
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+#quiz-btn.disabled {
+  background: #777 !important;
+  cursor: not-allowed !important;
+  opacity: 0.6 !important;
 }
 
 #quiz-btn:hover {
